--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>UniList</title>
 		<link rel="stylesheet" href="./normalize.css">
 		<link rel="stylesheet" href="./style.css">
-		<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+		<script src="./lodash.js"></script>
 		<script defer src="./script.js"></script>
 	</head>
 
